# testcalculator

./: .gitignore  CMakeLists.txt  README.MD
app/: CMakeLists.txt  Main.qml  gui.cpp  gui.h  main.cpp
win64_build/: calculator_history.txt  testcalculator.exp  testcalculator.lib
